# rust-actix-example

./: .Dockerfile  .env  .env.development  .gitignore  Cargo.toml  Private_key.txt  Public_key.txt  README.md  notes.txt
mock_actix_web/: Cargo.toml
mock_actix_web/src/: main.rs
mock_actix_web/src/tests/: handler_tests.rs
src/: main.rs
src/assets/: user_verification_email.rs
src/controllers/customer/: index.rs
src/controllers/global/user/: data.rs  handler.rs  handler_protected.rs
src/controllers/internal/user/: data.rs  handler.rs
src/controllers/system/user/: data.rs  handler.rs
src/db/postgres/: mod.rs
src/middlewares/: auth.rs
src/regex/: user.rs
src/routes/: mod.rs
src/routes/admin/: mod.rs  user.rs
src/routes/customer/: mod.rs
src/routes/global/: mod.rs
src/routes/superadmin/: user.rs
src/utils/: auth.rs  cli.rs  error.rs  http_body.rs  mailer.rs  paginate.rs  validator.rs
